--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/modal.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header id="headbar">
-        <h1>영화 검색</h1>
-        <input id="searchInput" type="text" placeholder="영화를 검색하세요..."
-            onkeypress="if( event.keyCode == 13 ){enterKey()}">
-        <button id="searchBtn">검색</button>
+    <header id="headBar">
+        <img src="https://i.ibb.co/B39byFq/jongflix-removebg-preview.png">
+        <div id="searchContainer">
+            <input id="searchInput" type="text" placeholder="영화를 검색하세요..."
+                onkeypress="if( event.keyCode == 13 ){enterKey()}">
+            <button id="searchBtn">검색</button>
+        </div>
+        <p id="bookMark">북마크</p>
     </header>
     <main>
-        <ul id="cardArea">
-            <!-- 영화 카드 -->
-        </ul>
-        <div id="modal" class="modal">
-            <div id="mainContent">
-                <span class="close">&times;</span>
-                <h2 class="modalTitle">제목</h2>
+        <section id="cardContainer">
+            <ul id="cardArea">
+                <!-- 영화 카드 -->
+            </ul>
+        </section>
+        <div id="modal">
+            <div id="modalContent">
+                <span id="close">&times;</span>
+                <h2 id="modalTitle">제목</h2>
                 <p id="modalBody">내용</p>
             </div>
         </div>
