검색기능 코드 수정: 중복된 부분 하나로 통합

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header id="headBar">
         <img src="https://i.ibb.co/B39byFq/jongflix-removebg-preview.png">
         <div id="searchContainer">
-            <input id="searchInput" type="text" placeholder="영화를 검색하세요..."
-                onkeypress="if( event.keyCode == 13 ){enterKey()}">
+            <input id="searchInput" type="text" placeholder="영화를 검색하세요...">
             <button id="searchBtn">검색</button>
         </div>
         <p id="bookMark">북마크</p>
