--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/modal.css">
+    <link rel="website icon" type="png" href="https://www.iconpacks.net/icons/1/free-movie-icon-850-thumb.png">
     <title>Document</title>
 </head>
 
@@ -19,11 +20,9 @@
         <p id="bookMark">북마크</p>
     </header>
     <main>
-        <section id="cardContainer">
-            <ul id="cardArea">
-                <!-- 영화 카드 -->
-            </ul>
-        </section>
+        <ul id="cardArea">
+            <!-- 영화 카드 -->
+        </ul>
         <div id="modal">
             <div id="modalContent">
                 <span id="close">&times;</span>
