✨ update     로고클릭시 원래화면으로 돌아가는 기능

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/modal.css">
     <link rel="website icon" type="png" href="https://www.iconpacks.net/icons/1/free-movie-icon-850-thumb.png">
-    <title>Document</title>
+    <title>JONGFLIX</title>
 </head>
 
 <body>
     <header id="headBar">
-        <img src="https://i.ibb.co/B39byFq/jongflix-removebg-preview.png">
+        <a href="./index.html">
+            <img src="https://i.ibb.co/B39byFq/jongflix-removebg-preview.png">
+        </a>
         <div id="searchContainer">
             <input id="searchInput" type="text" placeholder="영화를 검색하세요...">
             <button id="searchBtn">검색</button>
