✨ update    dialog를 활용한 모달창 열고닫기 기능 추가

--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         <ul id="cardArea">
             <!-- 영화 카드 -->
         </ul>
-        <div id="modal">
+        <dialog id="modal">
             <div id="modalContent">
                 <span id="close">&times;</span>
-                <h2 id="modalTitle">제목</h2>
-                <p id="modalBody">내용</p>
+                <img src="https://www.shutterstock.com/image-photo/beautiful-golden-retriever-cute-puppy-260nw-2526542701.jpg"
+                    alt="">
+                <h1>영화 제목</h1>
+                <p>상세 정보</p>
+                <p>개봉일</p>
+                <p>평점</p>
             </div>
-        </div>
+        </dialog>
     </main>
     <script src="./js/main.js"></script>
 </body>
