--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
     </style>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/card-style.css">
     <link rel="stylesheet" href="./css/modal.css">
     <link rel="website icon" type="png" href="https://www.iconpacks.net/icons/1/free-movie-icon-850-thumb.png">
     <title>JONGFLIX</title>
