--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <main>
-        <ul id="cardArea">
+        <ul id="cardContainer">
             <!-- 영화 카드 -->
         </ul>
         <dialog id="modal">
