➕ add: script타입을 모듈로 변경하는 코드 추가

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- 모달 -->
         </dialog>
     </main>
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
